--- a/chapter2.tex
+++ b/chapter2.tex
@@ -2,7 +2,7 @@
 
 
 
-KH Coderд╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟двдыбеевеєе▒б╝е╚д╬╝л═│╡н╜╥бжедеєе┐е╙ехб╝╡н╧┐бж┐╖╩╣╡н╗Ўд╩д╔бдд╡д▐д╢д▐д╩╝╥▓ё─┤║║е╟б╝е┐дЄ╩м└╧д╣дыд┐дсбд╬й╠┐┤█┬ч│╪д╬╚ї╕¤дм│л╚пд╖д┐дтд╬д╟двдыбе╖╫╬╠е╞ене╣е╚╩м└╧д▐д┐д╧е╞ене╣е╚е▐еде╦еєе░д╬╩¤╦бд╦┬╨▒■д╖д╞ддды\cite{kh1}бе┐∙▒║дщ\cite{kango}д╧└о┐═┤╟╕ю│╪│╡╧└д╬└о─╣╩є╣Ё╜ёд╦KH Coderд╬├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐╡б╟╜дЄ┼м═╤д╣дыд│д╚д╟бд└о┐═┤╟╕ю│╪│╡╧└д╦е╫еэе╕езепе╚│╪╜мдЄ║╬═╤д╖д┐╕·▓╠дЄ╠└дщдлд╦д╖д┐бе
+KH Coder\cite{kh1}д╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟двдыбеевеєе▒б╝е╚д╬╝л═│╡н╜╥бжедеєе┐е╙ехб╝╡н╧┐бж┐╖╩╣╡н╗Ўд╩д╔бдд╡д▐д╢д▐д╩╝╥▓ё─┤║║е╟б╝е┐дЄ╩м└╧д╣дыд┐дсбд╬й╠┐┤█┬ч│╪д╬╚ї╕¤дм│л╚пд╖д┐дтд╬д╟двдыбе╖╫╬╠е╞ене╣е╚╩м└╧д▐д┐д╧е╞ене╣е╚е▐еде╦еєе░д╬╩¤╦бд╦┬╨▒■д╖д╞дддыбе┐∙▒║дщ\cite{kango}д╧└о┐═┤╟╕ю│╪│╡╧└д╬└о─╣╩є╣Ё╜ёд╦KH Coderд╬├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐╡б╟╜дЄ┼м═╤д╣дыд│д╚д╟бд└о┐═┤╟╕ю│╪│╡╧└д╦е╫еэе╕езепе╚│╪╜мдЄ║╬═╤д╖д┐╕·▓╠дЄ╠└дщдлд╦д╖д┐бе
 
 
 %░╩▓╝д╦бдKH Coderд╬╝чд╩▓─╗ы▓╜е─б╝еыд╦д─ддд╞╛╥▓Ёд╣дыбе
@@ -11,7 +11,7 @@ KH Coderд╚д╧бде╞ене╣е╚╩╕╛╧╖┐д╬е╟б╝е┐дЄ┼¤╖╫╩м└╧д╣дыд┐дсд╬е╒еъб╝д╬е╜е╒е╚ежезевд╟дв
 %\subsection{├▒╕ь╢ж╡пе═е├е╚еяб╝еп┐▐}
 
 %KH Coderд╧бд┼¤╖╫╖╫╗╗д╚е░еще╒еге├епе╣д╬д┐дсд╬┤─╢нб╓Rб╫дЄ╞т╔Їд╟▓Є└╧д╦═°═╤д╖д╞дддыбеKH Coderд╟╖┴┬╓┴╟▓Є└╧╕хд╬е╟б╝е┐д╬╢ж╡пе═е├е╚еяб╝еп▓─╗ы▓╜дЄ╣╘джд╦двд┐дъбдд╔д│длдщд╔д│д▐д╟д╬╚╧░╧╞тд╟╢ж╡пд╣дьд╨╢ж╡п╚╜─ъдЄ╣╘дждлд╚дддж╜╕╖╫├▒░╠дЄKH Coder╛хд╟└▀─ъ▓─╟╜д╟двдыбе
-KH Coderд╧▓■╣╘д╦дшд├д╞├╩═юдЄ╟з╝▒д╖бд╢ч┼└д╦дшд├д╞╩╕дЄ╟з╝▒д╣дыбедшд├д╞д╥д╚├╩═юд╩ддд╖░ь╩╕дЄ╜╕╖╫├▒░╠д╚д╖д╞└▀─ъд╣дыд│д╚дм▓─╟╜д╦д╩д├д╞дддыбе\cite{manu}
+KH Coderд╧▓■╣╘д╦дшд├д╞├╩═юдЄ╟з╝▒д╖бд╢ч┼└д╦дшд├д╞╩╕дЄ╟з╝▒д╣дыбедшд├д╞д╥д╚├╩═юд╩ддд╖░ь╩╕дЄ╜╕╖╫├▒░╠д╚д╖д╞└▀─ъд╣дыд│д╚дм▓─╟╜д╦д╩д├д╞ддды\cite{manu}бе
 
 KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 \begin{itemize}
@@ -28,7 +28,7 @@ KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 
 %\subsection{╝л╕╩┴╚┐е▓╜е▐е├е╫}
 
-%╝л╕╩┴╚┐е▓╜е▐е├е╫╡б╟╜д╦дшдыележеєе╗еъеєе░е╞ене╣е╚е╟б╝е┐д╬├▒╕ьепеще╣е┐еъеєе░д╦┤Ёд┼днбдд╜д╬├▒╕ье░еыб╝е╫╩м╔█дЄ╜╕╖╫д╖д┐бед▐д┐бд╝л╕╩┴╚┐е▓╜е▐е├е╫д╦╔┴▓шд╡дьд┐├▒╕ьдлдщ╝ъ╞░д╟е▐еде╩е╣едесб╝е╕д╩ддд╖е╫еще╣едесб╝е╕д╬├▒╕ьдЄ┴кдєд╟д╜дьд╛дье░еыб╝е╫дЄд─дпдъбдд╜д╬├▒╕ье░еыб╝е╫╩м╔█дЄ╜╕╖╫д╖д┐бе
+%╝л╕╩┴╚┐е▓╜е▐е├е╫╡б╟╜д╦дшдыележеєе╗еъеєе░е╞ене╣е╚е╟б╝е┐д╬├▒╕ьепеще╣е┐еъеєе░д╦┤Ёд┼днбдд╜д╬├▒╕ьд╬е░еыб╝е╫╩м╔█дЄ╜╕╖╫д╖д┐бед▐д┐бд╝л╕╩┴╚┐е▓╜е▐е├е╫д╦╔┴▓шд╡дьд┐├▒╕ьдлдщ╝ъ╞░д╟е▐еде╩е╣едесб╝е╕д╩ддд╖е╫еще╣едесб╝е╕д╬├▒╕ьдЄ┴кдєд╟д╜дьд╛дье░еыб╝е╫дЄд─дпдъбдд╜д╬├▒╕ьд╬е░еыб╝е╫╩м╔█дЄ╜╕╖╫д╖д┐бе
 
 %╝л╕╩┴╚┐е▓╜е▐е├е╫├▒┬╬д╬╠ф┬ъ┼└д╚д╖д╞д╧бдепеще╣е┐б╝д┤д╚д╬╔┴▓ш┐здЄ╝л╩мд╟┴кд┘д╩ддд│д╚бд║ю└од╦1╩м╚╛б┴3╩м╗■┤╓дмдлдлдыд│д╚дм╡єд▓дщдьдыбе
 
@@ -40,9 +40,7 @@ KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 
 %%% д╜д│д╟╦▄╕ж╡цд╟д╧└шд╦╜╥д┘д┐б╓╩к═¤╬╠д╬┤╪╖╕дм╕лдщдьдыб╫бдб╓еве╦есб╝е╖ечеє╔╜╝и▓─╟╜б╫б╓╝л═│д╩╗ы┼└░▄╞░дм▓─╟╜б╫дЄе─б╝еы═╫╖яд╚д╖д╞└▀─ъд╖бде─б╝еы│л╚пдЄ╣╘д├д┐бе
 
-╕╢┼─дщ\cite{voistrap}д╧бде▐едепд╬▓╗░╡длдщ╧├╝╘д╬├¤дъ╗╧дсдлдщ├¤дъ╜кдядъд▐д╟дЄ▓─╗ы▓╜д╖бд╧├╝╘д┤д╚д╬╚п╧├╬╠дЄ╦└е░еще╒д╟бд╚п╧├д╬╜┼д╩дъдЄ└▐дь└■е░еще╒д╟▓─╗ы▓╜д╖д┐бед╖длд╖╦▄╕ж╡цд╟д╧бдележеєе╗еъеєе░д╦дкддд╞ележеєе╗ещб╝длдщд╔д╬дшджд╩епещедеиеєе╚д╬╧├┬ъдЄ░·дн╜╨д╗д┐длд╚ддджбдележеєе╗ещб╝д╚епещедеиеєе╚д╚д╬╚п╕└д╬┬╨▒■дм╜┼═╫д╦д╩дыд╬д╟бдд╦д╧епещедеиеєе╚д╬╚п╕└╛Ё╩єд╚ележеєе╗ещб╝д╬╚п╕└╛Ё╩єд╬╬╛╩¤дЄе│еєе╤епе╚д╦1д─д╬е░еще╒д╦д▐д╚дсды╩¤дм╬╔ддд╚╣═дидыбед▐д┐ележеєе╗еъеєе░дЄ╜ёдн╡пд│д╖д┐е╞ене╣е╚е╟б╝е┐д╦дкддд╞д╧бдд╜д╬╚п╕└д╦▓┐╔├длдлд├д┐длдфбдд╔д│д╟╚п╧├д╬╜┼д╩дъдмдвдыдлдм╩мдлдщд╩ддбе
-
-╛▒дщ\cite{shou}д╧бдWebележеєе╗еъеєе░е─б╝еыд╦дкддд╞бд└▐дь└■е░еще╒дЄ═╤ддд╞епещедеиеєе╚д╬╧├┬ъдЄ▓─╗ы▓╜д╖д┐бед╖длд╖бде╙еое╩б╝ележеєе╗ещб╝д╬╗╪╞│д╚дддж┤╤┼└д╟д╧е╙еое╩б╝ележеєе╗ещб╝длдщд╬╚п╕└╞т═╞д╚епещедеиеєе╚д╬╚п╕└╞т═╞дЄ┴╚д▀╣чдяд╗д╞▓─╗ы▓╜д╖д╩д▒дьд╨д╩дщд╩ддбе
+╕╢┼─дщ\cite{voistrap}д╧бде▐едепд╬▓╗░╡длдщ╧├╝╘д╬├¤дъ╗╧дсдлдщ├¤дъ╜кдядъд▐д╟дЄ▓─╗ы▓╜д╖бд╧├╝╘д┤д╚д╬╚п╧├╬╠дЄ╦└е░еще╒д╟бд╚п╧├д╬╜┼д╩дъдЄ└▐дь└■е░еще╒д╟▓─╗ы▓╜д╖д┐бед╖длд╖╦▄╕ж╡цд╟д╧бдележеєе╗еъеєе░д╦дкддд╞ележеєе╗ещб╝длдщд╔д╬дшджд╩епещедеиеєе╚д╬╧├┬ъдЄ░·дн╜╨д╗д┐длд╚ддджбдележеєе╗ещб╝д╚епещедеиеєе╚д╚д╬╚п╕└д╬┬╨▒■дм╜┼═╫д╦д╩дыд╬д╟бдд╦д╧епещедеиеєе╚д╬╚п╕└╛Ё╩єд╚ележеєе╗ещб╝д╬╚п╕└╛Ё╩єд╬╬╛╩¤дЄе│еєе╤епе╚д╦1д─д╬е░еще╒д╦д▐д╚дсды╩¤дм╬╔ддд╚╣═дидыбед▐д┐ележеєе╗еъеєе░дЄ╜ёдн╡пд│д╖д┐е╞ене╣е╚е╟б╝е┐д╦дкддд╞д╧бдд╜д╬╚п╕└д╦▓┐╔├длдлд├д┐длдфбдд╔д│д╟╚п╧├д╬╜┼д╩дъдмдвдыдлдм╩мдлдщд╩ддбе╛▒дщ\cite{shou}д╧бдWebележеєе╗еъеєе░е─б╝еыд╦дкддд╞бд└▐дь└■е░еще╒дЄ═╤ддд╞епещедеиеєе╚д╬╧├┬ъдЄ▓─╗ы▓╜д╖д┐бед╖длд╖бде╙еое╩б╝ележеєе╗ещб╝д╬╗╪╞│д╚дддж┤╤┼└д╟д╧е╙еое╩б╝ележеєе╗ещб╝длдщд╬╚п╕└╞т═╞д╚епещедеиеєе╚д╬╚п╕└╞т═╞дЄ┴╚д▀╣чдяд╗д╞▓─╗ы▓╜д╖д╩д▒дьд╨д╩дщд╩ддбе
 
 
 Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐беEricдщд╦дшдьд╨бде╤е┐б╝еєдЄ─┤║║д╣ды║▌д╦бд░█д╩дыеде┘еєе╚д╬╗■╣яд╧2д─д╬ете╟еыд╟░уд├д╞е╧едещеде╚д╡дьдыдлд╔дждлд╦д─ддд╞╕лдыд│д╚дм╜┼═╫д╦д╩дые▒б╝е╣дмдвдыбе
@@ -73,4 +71,4 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 ░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╬┤╪дядъдвдддЄ▓─╗ы▓╜д╣дыбее╙еое╩б╝д╬ележеєе╗ещб╝д╬╝┴╠фд╬╝я╬рд╦▒■д╕д╞дддлд╦епещедеиеєе╚д╬▓є┼·дЄ░·дн╜╨д╗дыдлд╦┬╨д╖д╞е┘е╞ещеєд╬ележеєе╗ещб╝д╧├х╠▄д╖д╞дддыдмбдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╣дыд╬д╟бдд╜д╬╛Ё╩єдЄ┤▐дсд╩дмдщбдележеєе╗ещб╝д╬╝┴╠фд╬╝я╬р╩мд▒дЄдддлд╦▓─╗ы▓╜д╣дыдлдм╜┼═╫д╟двдыбе
 
-д╜д│д╟─є░╞е─б╝еыд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ье░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е─б╝еыд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешеме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыбдеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыдмбдд╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ье░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе┬ш4╛╧д╟д╧д╔д╬дшджд╦е─б╝еыдЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
+д╜д│д╟─є░╞е─б╝еыд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ьд╬е░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е─б╝еыд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешеме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыбед╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ьд╬е░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе┬ш4╛╧д╟д╧д╔д╬дшджд╦е─б╝еыдЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
