--- a/chapter4.tex
+++ b/chapter4.tex
@@ -19,7 +19,7 @@
 
 д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
-ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ье░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
+ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
 ╦▄е─б╝еыд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
@@ -263,7 +263,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞бд12╠╛д╬└ь╠ч▓╚д╦╦▄е─б╝еыдЄ╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые─б╝еы═╫╖ядЄ├ъ╜╨д╖д┐бе
+4.1└сд╟└т╠└д╖д┐е╫еэе╚е┐еде╫дЄбд2016╟п1╖юд╬б╓┐┤д╬▓─╗ы▓╜╕ж╡ц▓ёб╫д╦д╞12╠╛д╬└ь╠ч▓╚д╦╕лд╞ддд┐д└днбде│есеєе╚дЄддд┐д└ддд┐бед╜д╬е│есеєе╚дЄ╕╡д╦бд░╩▓╝д╦╜╥д┘дые─б╝еы═╫╖ядЄ├ъ╜╨д╖д┐бе
 \begin{itemize}
 
 \item д╔д│дмд╔д╬╚п╕└дЄ╔╜д╖д╞дддыдлдядлдщд╩ддбдд▐д┐еще╕еке▄е┐еєдм┬┐д╣дод╞е░еще╒дм▓╝д╬╩¤д╦дддп
