--- a/chapter5.tex
+++ b/chapter5.tex
@@ -54,7 +54,7 @@
 の計15個のテキストデータを用意した．
 
 さらにこの提案ツールにおいて，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
-以上，16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した．[\{"a":"(本文)"\}]の形式で作成した．
+以上，16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
 \section{内部アルゴリズム}
 
@@ -62,7 +62,7 @@
 次に，前セクションで述べた入力データを用いた，本提案ツールのアルゴリズムについて説明する．
 まず，ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
 形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
-カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「愛」「仕事」「交友」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の単語グループの時間経過に沿った分布変化を可視化した．
+カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「愛」「仕事」「交友」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の単語のグループの時間経過に沿った分布変化を可視化した．
 
 本ツールでは，クライエントないしカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
 
