--- a/main.tex
+++ b/main.tex
@@ -43,8 +43,7 @@
 \bibliography{main}
 \begin{thebibliography}{数字}
 	\bibitem{taskdriven} Eric Alexander and Michael Gleicher, Task-driven comparison of topic models,
-IEEE TRANSACTIONS ON VISUALIZATION AND COMPUTER GRAPH
-ICS, Vol. 22, No. 1, (2016), pp. 320-329.
+IEEE TRANSACTIONS ON VISUALIZATION AND COMPUTER GRAPHICS, Vol. 22, No. 1, (2016), pp. 320-329.
 	\bibitem{ad2} HEINZ L. ANSBACHER, ROWENA R. ANSBACHER，THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER，New York : Haper, Row, Publishers, Inc.，(1956).
 \end{thebibliography}
 
