--- a/chapter3.tex
+++ b/chapter3.tex
@@ -1,9 +1,9 @@
-本章では，ツール開発にあたり必要となるヨガセラピーの基礎事項について説明する．心理療法で，単一ですべてに
-通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案ツールの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．アドラー心理学は認知行動
-療法の先駆け的存在として存在しているとされる．行っていることは認知の修正で，同じようなアプローチがとられている．
+本章では，ツール開発にあたり必要となるヨーガセラピーの基礎事項について説明する．心理療法では，単一ですべてに
+通じる学派はない．最大の学派は認知行動療法と言われているが，今回提案ツールの入力データとして取り扱うヨーガ療法ではアドラー心理学が取り入れられている．
 
-
-アドラー心理学は，オーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し，その後継者たちが発展させた心理学の理論，思想と治療技法の体系である\cite{zokad}．17世紀にルネ・デカルトが端を発して以来，1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された．ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず，人間の行動や発話の総体――をその主題とする，自然科学の一部門」と述べて以来，アメリカで行動主義が心理学の有力手法となった一方で，実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった．フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは，後にフロイトの考えに異を唱えた．%カール・ユングが唱えたのは，人間誰しも，個人的経験には一切基づいていないあるはっきりと分離された無意識の部分，すなわち「集合的無意識」が存在し，「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった．
+アドラー心理学は認知行動
+療法の先駆け的存在とされている．行っていることは認知の修正で，同じようなアプローチがとられている．
+アドラー心理学はオーストリアの精神科医であるアルフレッド・アドラー (A.Adler)が創始し，その後継者たちが発展させた心理学の理論，思想と治療技法の体系である\cite{zokad}．17世紀にルネ・デカルトが端を発して以来，1879年にヴィルヘルム・ヴントが世界初の心理学実験室を創設したことで哲学的ルーツから切り離された．ジョン・B・ワトソンが「人間の行動――学習されたか否かを問わず，人間の行動や発話の総体――をその主題とする，自然科学の一部門」と述べて以来，アメリカで行動主義が心理学の有力手法となった一方で，実験的証拠よりも観察と症例に基礎を置いたジグムント・フロイトの考えがヨーロッパを中心に広がっていった．フロイトの考えに初めは賛成していたカール・ユングとアルフレート・アドラーは，後にフロイトの考えに異を唱えた．%カール・ユングが唱えたのは，人間誰しも，個人的経験には一切基づいていないあるはっきりと分離された無意識の部分，すなわち「集合的無意識」が存在し，「集合的無意識」は神話や象徴として世代を超えて代々受け継がてきた「元型（アーキタイプ）」から成り立っているということであった．
 
 %一方，アドラーが初めて示唆したのは，個人の心理は現時点における意識的諸力にも影響されるが，社会的領域や環境の影響も同様に見逃せないということであった．
 
@@ -13,8 +13,7 @@
 %世間では，「嫌われる勇気」が大ベストセラーになったおかげで，昨年から急に有名となってきましたが，マイナーな学派であった．ヨーガ療法についても同様である．
 
 
-ヴントの心理学は実験心理学で，臨床心理学とは常に平行線を長年たどってき
-た．現在でも，実験系の心理と臨床系の心理は，なかなかディスカッショ
+ヴントの心理学は実験心理学で，臨床心理学とは長年相容れないものとして存在し続けてきた．現在でも，実験系の心理と臨床系の心理は，なかなかディスカッショ
 ンが進まない状態も残存している．そこに認知行動療法が出てきて，実験系と
 臨床系がかなり相乗りするようになってきたのが現代までの大まかな流れだとされている．
 
@@ -29,7 +28,13 @@
 
 
 現在，世界保健機関（WHO）憲章前文において「健康とは，病気でないとか，弱っていないということではなく，肉体的にも，精神的にも，そして社会的にも，すべてが
-満たされた状態にあることをいいます．（日本WHO協会訳）」と書いてある通り，WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている．一方，アドラーは「人生のすべての問題は，3つの主要なタスクに分類することが出来る．すなわち，交友のタスク，仕事のタスク，愛のタスクであると唱えた．\cite{ad2}以上からアドラー心理学では，ライフタスクについて，来談者にとっての親疎の関係から，仕事のタスク（Work Task）：永続しない人間関係，交友のタスク（Friendship Task）：永続するが，運命をともにしない人間関係，愛のタスク（Love or Family Task）：永続し，運命をともにする人間関係の3つに区別している．臨床上，人間の問題についてこのように恣意的に3つに分類することは，極めて有効であるとされている．
+満たされた状態にあることをいいます．（日本WHO協会訳）」と書いてある通り，WHOは健康を肉体的・精神的・社会的という3つの側面からとらえている．一方，アドラーは「人生のすべての問題は，3つの主要なタスクに分類することが出来る．すなわち，交友のタスク，仕事のタスク，愛のタスクであると唱えた\cite{ad2}．以上からアドラー心理学では，ライフタスクについて，来談者にとっての親疎の関係から，
+\begin{itemize}
+\item 仕事のタスク：永続しない人間関係
+\item 交友のタスク：永続するが，運命をともにしない人間関係
+\item 愛のタスク：永続し，運命をともにする人間関係
+\end{itemize}
+の3つに区別している．臨床上，人間の問題についてこのように恣意的に3つに分類することは，極めて有効であるとされている．
 
 %
 
@@ -93,4 +98,4 @@
 
 %もうひとつのタスクとして，ビギナーのカウンセラーは閉じられた質問を多く用いる傾向にあるので，ビギナーのカウンセラーを開かれた質問が自由に使えるようになる必要がある．これをチェックできることが求められる．
 
-以上のことをもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebツールを開発した．次章では本論文の提案ツールのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案ツールに対する要件の抽出について説明する．
+以上の分類法をもとに，本研究では，タイムライン形式の時間軸に沿った可視化によって，クライエントとカウンセラーの会話を可視化し，カウンセラーの発した質問によって会話の流れがどのように変化するのかを明らかにするWebツールを開発した．次章では本論文の提案ツールのプロトタイプの開発，およびそのプロトタイプに対して専門家すなわちカウンセラーからいただいたレビューをもとにした，提案ツールに対する要件の抽出について説明する．
