--- a/chapter2.tex
+++ b/chapter2.tex
@@ -71,4 +71,4 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 ░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╬┤╪дядъдвдддЄ▓─╗ы▓╜д╣дыбее╙еое╩б╝д╬ележеєе╗ещб╝д╬╝┴╠фд╬╝я╬рд╦▒■д╕д╞дддлд╦епещедеиеєе╚д╬▓є┼·дЄ░·дн╜╨д╗дыдлд╦┬╨д╖д╞е┘е╞ещеєд╬ележеєе╗ещб╝д╧├х╠▄д╖д╞дддыдмбдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╣дыд╬д╟бдд╜д╬╛Ё╩єдЄ┤▐дсд╩дмдщбдележеєе╗ещб╝д╬╝┴╠фд╬╝я╬р╩мд▒дЄдддлд╦▓─╗ы▓╜д╣дыдлдм╜┼═╫д╟двдыбе
 
-д╜д│д╟─є░╞е─б╝еыд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ьд╬е░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е─б╝еыд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешеме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыбед╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ьд╬е░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе┬ш4╛╧д╟д╧д╔д╬дшджд╦е─б╝еыдЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
+д╜д│д╟─є░╞е─б╝еыд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ьд╬е░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е─б╝еыд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешб╝еме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыбед╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ьд╬е░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе┬ш4╛╧д╟д╧д╔д╬дшджд╦е─б╝еыдЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
