--- a/chapter2.tex
+++ b/chapter2.tex
@@ -33,7 +33,7 @@ KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 %╝л╕╩┴╚┐е▓╜е▐е├е╫├▒┬╬д╬╠ф┬ъ┼└д╚д╖д╞д╧бдепеще╣е┐б╝д┤д╚д╬╔┴▓ш┐здЄ╝л╩мд╟┴кд┘д╩ддд│д╚бд║ю└од╦1╩м╚╛б┴3╩м╗■┤╓дмдлдлдыд│д╚дм╡єд▓дщдьдыбе
 
 
-\section{└▐дь└■е░еще╒дЄ═╤ддд┐▓ё╧├д╬▓─╗ы▓╜}
+\section{╗■╖╧╬єд╦▒шд├д┐╧├┬ъд╬▓─╗ы▓╜}
 
 
 %%% д╖длд╖бдд│дьдщд╬╩╕╕ед╟д╧▒▓д╚╟о═в┴ўд╚д╬┤╪╖╕дЄ▓─╗ы▓╜д╖д┐╕хбд┬╨╧├┼кдлд─╧в┬│┼кд╦╝бд╬╩м└╧дЄ╣╘джд│д╚д╬д╟дндые╙е╕ехевеы╩м└╧е─б╝еыд╬│л╚пд╧╣╘дядьд╞ддд╩ддбе
@@ -43,8 +43,7 @@ KH Coderд╬е╟есеъе├е╚д╚д╖д╞бд
 ╕╢┼─дщ\cite{voistrap}д╧бде▐едепд╬▓╗░╡длдщ╧├╝╘д╬├¤дъ╗╧дсдлдщ├¤дъ╜кдядъд▐д╟дЄ▓─╗ы▓╜д╖бд╧├╝╘д┤д╚д╬╚п╧├╬╠дЄ╦└е░еще╒д╟бд╚п╧├д╬╜┼д╩дъдЄ└▐дь└■е░еще╒д╟▓─╗ы▓╜д╖д┐бед╖длд╖╦▄╕ж╡цд╟д╧бдележеєе╗еъеєе░д╦дкддд╞ележеєе╗ещб╝длдщд╔д╬дшджд╩епещедеиеєе╚д╬╧├┬ъдЄ░·дн╜╨д╗д┐длд╚ддджбдележеєе╗ещб╝д╚епещедеиеєе╚д╚д╬╚п╕└д╬┬╨▒■дм╜┼═╫д╦д╩дыд╬д╟бдд╦д╧епещедеиеєе╚д╬╚п╕└╛Ё╩єд╚ележеєе╗ещб╝д╬╚п╕└╛Ё╩єд╬╬╛╩¤дЄе│еєе╤епе╚д╦1д─д╬е░еще╒д╦д▐д╚дсды╩¤дм╬╔ддд╚╣═дидыбед▐д┐ележеєе╗еъеєе░дЄ╜ёдн╡пд│д╖д┐е╞ене╣е╚е╟б╝е┐д╦дкддд╞д╧бдд╜д╬╚п╕└д╦▓┐╔├длдлд├д┐длдфбдд╔д│д╟╚п╧├д╬╜┼д╩дъдмдвдыдлдм╩мдлдщд╩ддбе╛▒дщ\cite{shou}д╧бдWebележеєе╗еъеєе░е─б╝еыд╦дкддд╞бд└▐дь└■е░еще╒дЄ═╤ддд╞епещедеиеєе╚д╬╧├┬ъдЄ▓─╗ы▓╜д╖д┐бед╖длд╖бде╙еое╩б╝ележеєе╗ещб╝д╬╗╪╞│д╚дддж┤╤┼└д╟д╧е╙еое╩б╝ележеєе╗ещб╝длдщд╬╚п╕└╞т═╞д╚епещедеиеєе╚д╬╚п╕└╞т═╞дЄ┴╚д▀╣чдяд╗д╞▓─╗ы▓╜д╖д╩д▒дьд╨д╩дщд╩ддбе
 
 
-Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐беEricдщд╦дшдьд╨бде╤е┐б╝еєдЄ─┤║║д╣ды║▌д╦бд░█д╩дыеде┘еєе╚д╬╗■╣яд╧2д─д╬ете╟еыд╟░уд├д╞е╧едещеде╚д╡дьдыдлд╔дждлд╦д─ддд╞╕лдыд│д╚дм╜┼═╫д╦д╩дые▒б╝е╣дмдвдыбе
-╗■┤╓д╚д╚дтд╦е╚е╘е├еп╩м╔█д╬╩╤▓╜╖╣╕■дЄ╚ц│╙д╣дыд┐дсд╦бдEricдщд╧╚є┬╨╛╬д╬╧├┬ъе╒еэб╝┐▐дЄ║ю└од╖д┐бе
+Ericдщ\cite{taskdriven}д╧бд2╝я╬рд╬╝ъ╦бд╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛х▓╝д╬╚є┬╨╛╬└╤д▀╜┼д═└▐дь└■е░еще╒д╦дшд├д╞▓─╗ы▓╜д╖д┐бе╦▄╕ж╡цд╦дкддд╞дтбдележеєе╗ещб╝дкдшд╙епещедеиеєе╚д╬д╜дьд╛дьд╬╚п╕└д╦┤╪д╖д╞╛х▓╝д╬╚є┬╨╛╬└▐дь└■е░еще╒д╟╔┴▓шд╣дыд╚дддж▓─╗ы▓╜╝ъ╦бд╧╣═дидждыбед╖длд╖║г▓єд╧бдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╖бд╝┴╠фдлдщд╔д╬дшджд╩▓є┼·дм░·дн╜╨д╡дьдыдлд╦├х╠▄д╖д┐ддбед╖д┐дмд├д╞╛х▓╝╚є┬╨╛╬д╦д╜дьд╛дьележеєе╗ещб╝д╚епещедеиеєе╚д╬╚п╕└д╦д─ддд╞е░еще╒дЄ╩┬д┘дыд╬д╧╔╘┼м┼Ўд└д╚╣═дид┐бе
 
 %╝┤дшдъ╛хд╦╕╜дьд╞ддды1д─д╬ете╟еыд╬╧├┬ъд╚▓╝╡нд╬дшджд╦╕лдид╞ддды┬╛д╬ете╟еыд╬╧├┬ъд╟бд2д─д╬ете╟еыдлдщд╬╧├┬ъ╠й┼┘д╧бд▓г╗■┤╓╝┤д╦▒шд├д╞╖╫▓шд╡дьдыбе
 
@@ -67,8 +66,8 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
+░╦╞гдщ\cite{itoh2010interactive}д╧бде╓еэе░ецб╝е╢б╝дм╢╜╠гд╬двды╧├┬ъд╬╗■╖╧╬є┐ф░▄дЄ3╝б╕╡д╟▓─╗ы▓╜д╣дые╖е╣е╞ердЄ│л╚пд╖д┐бе╦▄╕ж╡цд╦дкддд╞бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды╛Ё╩єд╧╗■╖╧╬єбж╩╕д╬е░еыб╝е╫бж╩╕д╬┐Їд╬3╝б╕╡е╟б╝е┐бдележеєе╗ещб╝д╬╚п╕└д╦┤╪д╣ды╛Ё╩єд╧╗■╖╧╬єбж╝┴╠фд╬╝я╬рд╬2╝б╕╡е╟б╝е┐д╟двдыдмбд┐з╩мд▒дЄ═╤дддьд╨2╝б╕╡д╬е░еще╒д╟╜╜╩м▓─╗ы▓╜д╟дндыд╚╣═дид┐бе
 
 
-░ь╩¤╦▄╕ж╡цд╟д╧бдележеєе╗ещб╝д╚епещедеиеєе╚д╬▓ё╧├д╬┤╪дядъдвдддЄ▓─╗ы▓╜д╣дыбее╙еое╩б╝д╬ележеєе╗ещб╝д╬╝┴╠фд╬╝я╬рд╦▒■д╕д╞дддлд╦епещедеиеєе╚д╬▓є┼·дЄ░·дн╜╨д╗дыдлд╦┬╨д╖д╞е┘е╞ещеєд╬ележеєе╗ещб╝д╧├х╠▄д╖д╞дддыдмбдележеєе╗ещб╝д╬╝┴╠фд╚д╜дьд╦┬╨д╣дыепещедеиеєе╚д╬▓є┼·д╧╕Є╕▀д╦╜╨╕╜д╣дыд╬д╟бдд╜д╬╛Ё╩єдЄ┤▐дсд╩дмдщбдележеєе╗ещб╝д╬╝┴╠фд╬╝я╬р╩мд▒дЄдддлд╦▓─╗ы▓╜д╣дыдлдм╜┼═╫д╟двдыбе
 
-д╜д│д╟─є░╞е─б╝еыд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ьд╬е░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е─б╝еыд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешб╝еме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыбед╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ьд╬е░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе┬ш4╛╧д╟д╧д╔д╬дшджд╦е─б╝еыдЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
+╦▄─є░╞е─б╝еыд╚д╖д╞бдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩╕д╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бед╩дкбдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╚дддж├▒╕ьд╬е░еыб╝е╫д╬╩мд▒╩¤д╧бд╦▄─є░╞е─б╝еыд╬╞■╬╧е╟б╝е┐д╚д╖д╞╝шдъ░╖д├д┐ешб╝еме╗еще╘б╝дм┤Ё╦▄д╚д╖д╞дддыеве╔ещб╝┐┤═¤│╪д╦═│═шд╣дыдтд╬д╟двдыбед╜дьд╦д─ддд╞д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе├▒╕ьд╬е░еыб╝е╫д╬▓─╗ы▓╜д╦двд┐д├д╞д╧бдележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╖д╞▓╛д╬╩м╬р╖ы▓╠д╚д╖д╞е░еще╒дЄ─є╝ид╣дыбед╜д╬╛хд╟бдеще╕еке▄е┐еєд╦дшд├д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬╩м╬рдЄ╩╤╣╣д╣дыд│д╚дм╜╨═шдыдшджд╦д╖д┐бе┬ш4╛╧д╟д╧д╔д╬дшджд╦е─б╝еыдЄ╣╜└од╖д┐длд╦д─ддд╞╜╥д┘дыбе
