--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,4 +1,4 @@
-╦▄╛╧д╟д╧бд─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е─б╝еы═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╣дыбе
+╦▄╛╧д╟д╧бд─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫д╬│л╚пбддкдшд╙д╜д╬е╫еэе╚е┐еде╫д╦┬╨д╣дыецб╝е╢б╝ележеєе╗ещб╝длдщд╬еье╙ехб╝дЄдтд╚д╦д╖д┐бд─є░╞е─б╝еы═╫╖я├ъ╜╨д╦д─ддд╞└т╠└д╣дыбе╦▄─є░╞е╖е╣е╞ерд╬│╡═╫д╧╝б╛╧д╟╛▄д╖дп╜╥д┘дыбе
 
 
 
@@ -8,18 +8,18 @@
 
 
 
-ележеєе╗еъеєе░╜ёдн╡пд│д╖е╞ене╣е╚дЄ╝б╛╧д╟╜╥д┘ды┴░╜ш═¤дЄ╗▄д╖д┐╕хд╬jsonе╟б╝е┐дЄбд─є░╞е─б╝еыд╬е╫еэе╚е┐еде╫д╦╞■╬╧д╖д╞бд╦▄е╫еэе╚е┐еде╫дмд╔дж╜ш═¤д╣дыдлдЄ└т╠└д╣дыбее╫еэе╚е┐еде╫╞░║ю▓ш╠╠д╬д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
+е╦б╝е║─┤║║д╬д┐дсд╦бд╦▄─є░╞е╖е╣е╞ерд╬е╫еэе╚е┐еде╫дЄ│л╚пд╖д┐бее╫еэе╚е┐еде╫╞░║ю▓ш╠╠д╬д╬е╣епеъб╝еєе╖ече├е╚дЄ┐▐\ref{fig:systemtsukaikata}д╦╝ид╣бе
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{systemtsukaikata.png}
    \end{center}
-   \caption{─є░╞е─б╝еыд╬е╣епеъб╝еєе╖ече├е╚}
+   \caption{е╫еэе╚е┐еде╫д╬┴█─ъ┐▐бее╫еэе╚е┐еде╫╗■д╦д╧╝┤д╬╔╜╝идЄ╣╘д├д╞ддд╩длд├д┐дмбд▓г╝┤д╧╚п╕└┐Їбд╜─╝┤д╧╚п╕└├цд╬╩╕д╬┐Їд╬джд┴▓┐╩╕дмд╔д╬е░еыб╝е╫д╦╩м╬рд╡дьдыдлд╚дддж│ф╣чдЄ╔╜д╣бе░ь╚╓╛хдм╜─╝┤д╬1}
    \label{fig:systemtsukaikata}
  \end{figure}
 
 д▐д║бде╓ещеже╢╛хд╟│╞е╞ене╣е╚д╬jsonе╒ебедеыдЄ╞╔д▀╣■дєд╟╖┴┬╓┴╟▓Є└╧д╣дыбе
 ╖┴┬╓┴╟▓Є└╧д╦д╧бдJavaScript╕└╕ьд╬╖┴┬╓┴╟▓Є└╧ещеде╓ещеъд╟двдыkuromoji.js\cite{kuromojijs}дЄ╗╚═╤д╖д┐бе
-ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бд╢ж╡пе▐е├е╫д╩д╔дЄ╔┴▓шд╖д╞б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
+ележеєе╗еъеєе░╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐дЄ╖┴┬╓┴╟▓Є└╧д╖бдб╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╦┤╪╧вд╣ды├▒╕ьдЄ├╡д╣бед╜д│длдщбдележеєе╗ещб╝длдщд╬╝┴╠ф╖┴┬╓д╚бд б╓░жб╫б╓╗┼╗Ўб╫б╓╕Є═зб╫д╬├▒╕ьд╬е░еыб╝е╫д╬╗■┤╓╖╨▓сд╦▒шд├д┐╩м╔█╩╤▓╜дЄ▓─╗ы▓╜д╖д┐бе
 
 ╦▄е─б╝еыд╟д╧бдепещедеиеєе╚д╩ддд╖ележеєе╗ещб╝д╬░ь╚п╕└дЄбд╧├╝╘д╬╕Є┬хд╦дшд├д╞╚╜├╟д╣дыдтд╬д╚д╣дыбед─д▐дъбдепещедеиеєе╚д╬░ь╚п╕└д╧бдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсд╞длдщбдепещедеиеєе╚дм├¤дъ╜кдяд├д╞ележеєе╗ещб╝дм├¤дъ╗╧дсдыд▐д╟д╟двдыбед▐д┐бдележеєе╗ещб╝д╬░ь╚п╕└д╧бдепещедеиеєе╚дм├¤дъ╜кдяд├д╞длдщбддвдыддд╧ележеєе╗ещб╝дм╧├дЄ└┌дъ╜╨д╖╗╧дсд╞длдщбдележеєе╗ещб╝дм├¤дъ╜кдяд├д╞епещедеиеєе╚дм├¤дъ╗╧дсдыд▐д╟д╟двдыбе
 
@@ -35,28 +35,29 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦╜┼д╩д├д╞дддыбд╗ч┐зд╩ддд╖╟╗дде░еьб╝┐зд╬╜─╦└д╧бдележеєе╗ещб╝д╬╝┴╠ф╞т═╞д╬╖┴┬╓дЄ╝ид╣бе╗ч┐зд╧5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫бд╟╗дде░еьб╝┐зд╧Yes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫дЄ╔╜╕╜д╖д╞дддыбе┬ш1╛╧д╟╜╥д┘д┐─╠дъбдепещедеиеєе╚дм▓┐д╦╠ф┬ъ░╒╝▒дЄ┤╢д╕д╞дддыдлдЄележеєе╗еъеєе░д╟░·дн╜╨д╣д╦д╧бдележеєе╗ещб╝д╧б╓╩─д╕дщдьд┐╝┴╠фб╫дшдъдтб╓│лдлдьд┐╝┴╠фб╫дЄд╖д┐д█дждмдшддд╚д╡дьд╞дддыбе
-╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}бд2014╟п11╖ю╕б╞д▓ё епещедеиеєе╚Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё епещедеиеєе╚Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}д╦╝ид╣бе
+╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1mogi2}%бд2014╟п11╖ю╕б╞д▓ё епещедеиеєе╚Aт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1a0911go}бд2015╟п11╖ю╕б╞д▓ё епещедеиеєе╚Cд╬е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠дЄ┐▐\ref{fig:system1_1002}
+д╦╝ид╣бе
  \begin{figure}
    \begin{center}
      \includegraphics[width=\linewidth,angle=90]{system1mogi2.png}
    \end{center}
-   \caption{─є░╞е─б╝еыг▒д╬╠╧╡╝е╟б╝е┐д╟д╬▓─╗ы▓╜╖ы▓╠}
+   \caption{е╫еэе╚е┐еде╫д╬е╣епеъб╝еєе╖ече├е╚бее╫еэе╚е┐еде╫╗■д╦д╧╝┤д╬╔╜╝идЄ╣╘д├д╞ддд╩длд├д┐дмбд▓г╝┤д╧╚п╕└┐Їбд╜─╝┤д╧╚п╕└├цд╬╩╕д╬┐Їд╬джд┴▓┐╩╕дмд╔д╬е░еыб╝е╫д╦╩м╬рд╡дьдыдлд╚дддж│ф╣чдЄ╔╜д╣бе░ь╚╓╛хдм╜─╝┤д╬1бе}
    \label{fig:system1mogi2}
  \end{figure}
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{system1a0911go.png}
-   \end{center}
-   \caption{─є░╞е─б╝еыг▒д╬'14╟п11╖ю╕б╞д▓ёAт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠}
-   \label{fig:system1a0911go}
- \end{figure}
- \begin{figure}
-   \begin{center}
-     \includegraphics[width=\linewidth,angle=90]{system1_1002.png}
-   \end{center}
-   \caption{─є░╞е─б╝еыг▒д╬'15╟п11╖ю╕б╞д▓ёCд╟д╬▓─╗ы▓╜╖ы▓╠}
-   \label{fig:system1_1002}
- \end{figure}
+% \begin{figure}
+  % \begin{center}
+%     \includegraphics[width=\linewidth,angle=90]{system1a0911go.png}
+  % \end{center}
+%   \caption{─є░╞е─б╝еыг▒д╬'14╟п11╖ю╕б╞д▓ёAт╘┴█╕хд╟д╬▓─╗ы▓╜╖ы▓╠}
+%   \label{fig:system1a0911go}
+% \end{figure}
+% \begin{figure}
+%   \begin{center}
+%     \includegraphics[width=\linewidth,angle=90]{system1_1002.png}
+%   \end{center}
+%   \caption{─є░╞е─б╝еыг▒д╬'15╟п11╖ю╕б╞д▓ёCд╟д╬▓─╗ы▓╜╖ы▓╠}
+%   \label{fig:system1_1002}
+% \end{figure}
 
 
 
@@ -80,7 +81,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 %\subsubsection{едеєе┐ещепе╞еге╓└ндмд╩дд}
-%╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
+%╔┴▓ш╕хд╦еще╕еке▄е┐еєдЄ╩╤дид╞дт╚┐▒■дмд╩ддбе╕╜╛їд╟д╧д╜д╬╛ьд╟еще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбдеще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыд│д╚дм╡сдсдщдьд┐бе
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
 %б╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбд┴ъ─╚дф└д┤╓╧├дЄб╓д╜д╬┬╛б╫дЄ└▀д▒дыд┘днд╚╣═дидщдьдыбе─є░╞е─б╝еы1д╦дкддд╞д╧бдб╓д╩д╝б╫б╓▓┐б╫д╩д╔д╬5W1HдЄ┐╓дпдшджд╩╡┐╠ф╗ыдЄ┤▐др╚п╕└дЄб╓│лдлдьд┐╝┴╠фб╫д╚д╖д╞─ъ╡┴д╖бдд╜дь░╩│░дЄб╓╩─д╕дщдьд┐╝┴╠фб╫д╚─ъ╡┴д╖д╞ддд┐д╬д╟бд─є░╞е─б╝еы1д╦дкд▒дыб╓╩─д╕дщдьд┐╝┴╠фб╫дЄд╡дщд╦бд░╩╣▀д╬е─б╝еыд╦дкддд╞б╓╩─д╕дщдьд┐╝┴╠фб╫д╚б╓д╜д╬┬╛б╫д╦дяд▒ды╔м═╫дмдвдыд╚╣═дидщдьдыбе
@@ -108,15 +109,15 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 %─є░╞е─б╝еыг▒д╟д╧бдд╔д╬╗■┤╓╝┤║┬╔╕дмд╔д╬╚п╕└дЄ╗╪д╖╝ид╣дл╠└╡нд╖д╞ддд╩длд├д┐бед╜д╬╠ф┬ъдЄ▓Є╖шд╣дыд┐дсд╦бд─є░╞е─б╝еыг▓д╦дкддд╞д╧бде▐еже╣екб╝е╨б╝д╦дшд├д╞╚п╕└╞т═╞дм╔╜╝ид╡дьды╗┼┴╚д▀дЄ║юд├д┐беележеєе╗ещб╝длдщд╬╝┴╠фд╬╢ш╩мд▒дЄ╝ид╣│╞╜─╦└д╦д─ддд╞бдд╜дьд╛дьд╜д╬╛хдЄе▐еже╣екб╝е╨б╝д╣дыд┐д╙д╦бд└╤д▀╜┼д═└▐дь└■е░еще╒дЄ╔┴▓шд╣дыSVG╬╬░шд╬д╣д░╛хд╦бд│╞б╣д╜д╬╜─╦└дм╗╪д╖╝ид╣ележеєе╗ещб╝длдщд╬╝┴╠фд╦┬╨▒■д╣ды╚п╕└бддкдшд╙бдд╜д╬ележеєе╗ещб╝д╬╚п╕└длдщбдепещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дЄ┤▐дсд╞д╜дьд╛дь┴░╕х3╚п╕└д║д─дЄ╔┴▓шд╣дыдшджд╦е╫еэе░ещерд╖д┐бед─д▐дъбдепещедеиеєе╚д╬╚п╕└дм┴░╕х2╚п╕└д║д─бдележеєе╗ещб╝д╬╚п╕└дм3╚п╕└╔╜╝ид╡дьд╞дддыдшджд╦д╖д┐бе
 
 %\subsubsection{едеєе┐ещепе╞еге╓└н}
-%д▐д┐бд─є░╞е─б╝еы1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╦д─ддд╞бд─є░╞е─б╝еы1д╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
+%д▐д┐бд─є░╞е─б╝еы1д╦дкддд╞д╧едеєе┐ещепе╞еге╓└ндмд╩длд├д┐бе│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дыеще╕еке▄е┐еєд╦д─ддд╞бд─є░╞е─б╝еы1д╟д╧д╜д╬╛ьд╟еще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бдг▒▓єг▒▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞ддд┐бе
 
-%д╖длд╖─є░╞е─б╝еы2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бдепещедеиеєе╚д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
+%д╖длд╖─є░╞е─б╝еы2д╟д╧бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбдеще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦▓■┴▒д╖д┐бед▐д┐бдепещедеиеєе╚д╬╧├┬ъд╬╩м╠юдЄ│╞├▒╕ьд┤д╚д╦╖шдс┬╟д┴д╖д┐дтд╬д└д▒д╟д╩дпбд╖шдс┬╟д┴д╖д╞ддд╩дддтд╬д╦┤╪д╖д╞дт┴к┬Є╗шдЄ╔╜╝ид╖┴к┬Єд╟дндыдшджд╦д╖д┐бе
 
 
 %\subsubsection{б╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫}
 %д╡дщд╦─є░╞е─б╝еыд╟д╧бдележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞дтбд5W1Hб╓ддд─б╫б╓д╔д│д╟б╫б╓├пдмб╫б╓▓┐дЄб╫б╓д╔д╬дшджд╦б╫б╓д╔джд╖д┐б╫д╩д╔д╟╠фдядьдыдшджд╩б╓│лдлдьд┐╝┴╠фб╫д╩д╬длбдYes/Noд╟┼·дидщдьдыбддвдыддд╧░ь╕└д└д▒д╟┤╩├▒┼·дидщдьдыдшджд╩б╓╩─д╕дщдьд┐╝┴╠фб╫д╩д╬длбддвдыддд╧╠╡┬╠╧├бж┴ъ─╚д╩д╔бдд╔д┴дщд╦дт╩м╬рд╡дьд╩дддшджд╩б╓д╜д╬┬╛б╫д╩д╬длдЄбдецб╝е╢б╝дм╝ъ╞░д╟╜д└╡д╟дндыдшджд╦д╖д┐бе
 
-%ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е─б╝еы1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дые┴езе├епе▄е├епе╣д╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
+%ележеєе╗ещб╝длдщд╬│╞╝┴╠фд╦дкддд╞бдд╜дьд╛дьб╓│лдлдьд┐╝┴╠фб╫бжб╓╩─д╕дщдьд┐╝┴╠фб╫бжб╓д╜д╬┬╛б╫д╬┴к┬Є╗шдм╔╜╝ид╡дьбд─є░╞е─б╝еы1д╟═╜┬мд╡дьд┐┴к┬Є╗шд╦двдщдлд╕дсе┴езе├епдм╞■д├д╞дддыдшдже╫еэе░ещерд╖д┐бед╜д╖д╞бд│╞├▒╕ьдЄепещедеиеєе╚д╬╧├┬ъд╬╩м╠юд┤д╚д╦дяд▒дыеще╕еке▄е┐еєд╚╞▒══д╦бде╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбдеще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╣дыдшджд╦д╖д┐бе
 
 
 %\subsubsection{б╓д╜д╬┬╛б╫}
@@ -272,7 +273,7 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 
 
 
-\item ╕╜╛їд╟д╧д╜д╬╛ьд╟е┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбде┴езе├епе▄е├епе╣д╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄддд┐д└ддд┐бе
+\item ╕╜╛їд╟д╧д╜д╬╛ьд╟еще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбдеще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄддд┐д└ддд┐бе
 
 
 \item еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
