--- a/chapter5.tex
+++ b/chapter5.tex
@@ -56,13 +56,14 @@
 さらにこの提案ツールにおいて，後述する初期グラフ描画がある程度有用なものかを示すために模擬データを1個用意した．
 以上，16個のカウンセリングの文字起こしテキストデータをそれぞれjsonファイルに変換した．%[\{"a":"(本文)"\}]の形式で作成した．
 
-\section{内部アルゴリズム}
+\section{アルゴリズム}
 
 
 次に，前セクションで述べた入力データを用いた，本提案ツールのアルゴリズムについて説明する．
+なお，本提案ツールの開発言語はJavaScriptである．
 まず，ブラウザ上で各テキストのjsonファイルを読み込んで形態素解析する．
 形態素解析には，JavaScript言語の形態素解析ライブラリであるkuromoji.js\cite{kuromojijs}を使用した．
-カウンセリング文字起こしテキストデータを形態素解析し，共起マップなどを描画して「愛」「仕事」「交友」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の単語のグループの時間経過に沿った分布変化を可視化した．
+カウンセリング文字起こしテキストデータを形態素解析し，「愛」「仕事」「交友」に関連する単語を探す．そこから，カウンセラーからの質問形態と， 「愛」「仕事」「交友」の単語のグループの時間経過に沿った分布変化を可視化した．この可視化の際に，データの可視化やデータに基づいてドキュメントを操作するために使用されているJavaScriptライブラリであるD3.js\cite{bostock2012d3}を使用した．
 
 本ツールでは，クライエントないしカウンセラーの一発言を，話者の交代によって判断するものとする．つまり，クライエントの一発言は，カウンセラーが喋り終わってクライエントが喋り始めてから，クライエントが喋り終わってカウンセラーが喋り始めるまでである．また，カウンセラーの一発言は，クライエントが喋り終わってから，あるいはカウンセラーが話を切り出し始めてから，カウンセラーが喋り終わってクライエントが喋り始めるまでである．
 
@@ -70,47 +71,88 @@ jsonファイル内の本文の形式について説明する．全角表示のコロン（：）で話者の交代を
 
 \subsection{積み重ね折れ線グラフ}
 図\ref{fig:ver160203}において，まず積み重ね折れ線グラフはクライエントの1回1回の発言の中での，アドラー心理学の各カテゴリの分布を可視化している．ただし1回1回の発言は，話者の交代を発言の区切れ目とする．この積み重ね折れ線グラフにおいて青色は「仕事関係」，ピンク色は「愛（恋愛・愛関係）」，緑色は「交友（友人関係）」に密接に関係する単語を含む文の分布を表している．
-横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内におけるクライエントの発言量の合計に対して
+横軸は時間軸を表現している．ただし対象データである書き起こしテキストデータからは実際の経過秒数は読み取れないので，読み込ませたデータ内におけるクライエントの発言量の累計の文字数を横軸，すなわち時間軸とした．後述するカウンセラーの質問を表現する縦棒はこの時間軸にそって出現する．カウンセラーとクライエントの発言の入れ替わりがわかりやすいように，積み重ね折れ線グラフがクライエントの発言のグループ分布をちょうど表しているのは便宜上発言部分の中央部分になっている．
+縦軸は発言中の1文の数のうち，どのグループに何文入っているかという文の数を表している．
+
+ここでjsonデータを入力した後のクライエントの発言の各1文の初期分類状態の分類方法について説明する．
+まず，あらかじめこちらで「これを含む文はこのグループに属するだろう」という単語を，「愛」「仕事」「交友」ごとに指定しておく．
+次に，各単語群を含むクライエントの発言の1文をグループ分けをしていった．
+今回は簡単化のため，複数のグループの可能性をもつ1文に対しては，「愛」の可能性があれば「愛」に，それ以外は「仕事」に分類するようにした．
+
+
 
 \subsection{カウンセラーの質問を表現する縦棒}
 
-Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，カウンセラーとクライエントの会話において，クライエントは文ごとに，カウンセラーは発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく，クライエントの発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．
+Ericら\cite{taskdriven}は，トピックモデリングによって分けたトピックの時間分布を上下の非対称積み重ね折れ線グラフによって可視化した．一方本研究では，カウンセラーとクライエントの会話において，クライエントは文ごとに，カウンセラーは発言ごとに描画を行いたい，かつ選択肢表示のためにグラフを省スペースしたいという観点から，カウンセラーの発言を横軸より下に折れ線グラフとして描画するのではなく，クライエントの発言のグループ分布を示す積み重ね折れ線グラフに重ねて縦棒として表示するようにした．こうすることによって，クライエントとカウンセラーの発言が交互に描画されるので，クライエントとカウンセラーの発言の関連性がわかりやすくなった．
 
 
-積み重ね折れ線グラフに重なっている，紫色ないし濃いグレー色の縦棒は，カウンセラーの質問内容の形態を示す．紫色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」，濃いグレー色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」を表現している．第1章で述べた通り，クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
-
-
-
-\section{ツール要件の達成}
-
-最後に，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどを重点的に説明する．
-
+積み重ね折れ線グラフに重なっている縦棒は，カウンセラーの質問内容の形態を示す．質問内容の形態は要件通り5種類であり，縦棒の色の対応を含め以下の通りである．
 \begin{itemize}
-\item 原文表示機能
+\item 濃いピンク色は5W1H「いつ」「どこで」「誰が」「何を」「どのように」「どうした」などで問われるような「開かれた質問」
+\item 濃い青色はYes/Noで答えられる，あるいは一言だけで簡単答えられるような「閉じられた質問」
+\item 紫は「相づち」
+\item オレンジはクライエントの問題をカウンセラーがどう「解釈」しているかの確認
+\item 黒は「無駄話」
+\end{itemize}
+を表現している．第1章で述べた通り，クライエントが何に問題意識を感じているかをカウンセリングで引き出すには，カウンセラーは「閉じられた質問」よりも「開かれた質問」をしたほうがよいとされている．
+
+ここでjsonデータを入力した後のカウンセラーの初期分類状態の分類方法を簡単に図\ref{fig:5_2}に示す．
+ \begin{figure}
+%\begin{landscape}
+   \begin{center}
+     \includegraphics[width=\linewidth,angle=90]{5_2.png}
+   \end{center}
+   \caption{カウンセラー発言初期分類方法}
+   \label{fig:5_2}
+%\end{landscape}
+ \end{figure}
+
+
+まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
+
+
+
+\section{原文表示機能}
+
+%本節では，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどを重点的に説明する．
+
+
 \begin{itemize}
 \item どこがどの発言を表しているかわからない
 \item ラジオボタンが多すぎてグラフが下の方にいく
 \end{itemize}
-という問題に対しては，まずカウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，周辺の発言を表示する機能を追加することで解決を図った．
-またカウンセラーやクライエントの発言に関するグループ分類を手動訂正するラジオボタンのエリアとまとめて，グラフより下側に文章表示されるようにレイアウト変更を行った．
+という問題に対しては，カウンセラーからクライエントへの質問を示す縦棒をマウスオーバーすることによって，グラフ右下に周辺の発言を表示する機能を追加することで解決を図った．
+%またカウンセラーやクライエントの発言に関するグループ分類を手動訂正するラジオボタンのエリアとまとめて，グラフより下側に文章表示されるようにレイアウト変更を行った．
 
 
-\item インタラクティブ性がない，積み重ね折れ線グラフが描画された後にラジオボタンを変えてもインタラクティブに積み重ね折れ線グラフが変更されないという問題に対して，描画後にラジオボタンを変えると即時にグラフ描画に変更適用されるように改良を行った．
+\section{ラジオボタン}
 
-\item ローカルでの動作において，ラジオボタン表示に約10秒必要であり，その経過時間が問題視されていた．それを受け，今回はプログラム上の無駄な記述を省くことで約5秒に短縮した．
+%\item 
+%インタラクティブ性がない，
+積み重ね折れ線グラフが描画された後に，グラフ左下のラジオボタンエリアで，クライアントの発言の各1文およびカウンセラーの各質問において分類を変えると，即時にグラフ描画に変更適用されるようにした．
+本ラジオボタンエリアがみたした要件については，付録にて記述する．
 
-\item クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更を行った．
+%\item 
+%ローカルでの動作において，ラジオボタン表示に約10秒必要であり，その所要時間が問題視されていた．それを受け，今回はプログラム上の無駄な記述を省くことで約5秒に短縮した．
 
-\item カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．ここで，積み重ね折れ線グラフの初期描画の際の分類行程について説明する．この行程について簡単に説明した図を，図5.1に示す．まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
+%\item 
+%クライエントの発言について単語単位ではなく文単位で「愛」「交友」「仕事」を分類するように変更を行った．
 
-\item 分量に応じて縦棒の太さや間隔を変えることを提案した．
+%\item 
+%カウンセラーの発言について，「開かれた質問」「閉じられた質問」だけでなく，「解釈」「相槌」「世間話」という分類を追加してほしいというレビューをいただいたので，追加を行った．ここで，積み重ね折れ線グラフの初期描画の際の分類行程について説明する．この行程について簡単に説明した図を，図5.1に示す．%まず「いつ」「どこ」「何」などのいわゆる5W1Hを示す疑問詞をもつ発言を「開かれた質問」に分類する．次に残りの発言のうち，単語数が５個以下のものを「相槌」に分類する．さらに残りの発言のうち終助詞「か」を含む発言を「閉じられた質問」に分類する．今までの３つに分類されなかったものは「解釈」か「世間話」に分類されるわけだが，終助詞の「ね」を含むものを「解釈」，含まないものを「世間話」とした．
+
+%\item 
+%分量に応じて縦棒の太さや間隔を変えることを提案した．
 
 
-\item 文字色の改善が求められていたが，文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした．
+%\item 
+%文字色の改善が求められていたが，文字色黒い文字を色のついた墨つきかっこ【】で囲うようにした．
 
-\item 積み重ね折れ線グラフにおいて，軸を表示するようにした．横軸の単位は入力したテキストデータの中でのクライエントの全ての発言の全ての文字数，縦軸の単位はクライエントの各発言の中で「愛」「交友」「仕事」のどのグループに分類される文の数が何文あるかである．
+%\item 
+%積み重ね折れ線グラフにおいて，軸を表示するようにした．横軸の単位は入力したテキストデータの中でのクライエントの全ての発言の全ての文字数，縦軸の単位はクライエントの各発言の中で「愛」「交友」「仕事」のどのグループに分類される文の数が何文あるかである．
 
 
 
-\item プロトタイプでは，クライエントの発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた．しかしそれではわかりづらいというレビューをもとに，元のテキストデータ通りの順番に並ぶように変更した．また，全ての文においてあらかじめ選択肢のラジオボタンが表示されていると非常に見づらいので，複数の選択肢の可能性があるとツールで判断したものについてのみあらかじめ選択肢のラジオボタンを表示し，それ以外に関してはラジオボタンエリア内のその該当箇所の文章をクリックすることで折りたたまれていた選択肢ラジオボタンがすぐ下に表示されるようにした．
-\end{itemize}
+%\item 
+%プロトタイプでは，クライエントの発言に関する選択肢がすべて表示された後にカウンセラーに関する発言が表示されるようになっていた．しかしそれではわかりづらいというレビューをもとに，元のテキストデータ通りの順番に並ぶように変更した．また，全ての文においてあらかじめ選択肢のラジオボタンが表示されていると非常に見づらいので，複数の選択肢の可能性があるとツールで判断したものについてのみあらかじめ選択肢のラジオボタンを表示し，それ以外に関してはラジオボタンエリア内のその該当箇所の文章をクリックすることで折りたたまれていた選択肢ラジオボタンがすぐ下に表示されるようにした．
+%\end{itemize}
