--- a/chapter6.tex
+++ b/chapter6.tex
@@ -20,6 +20,9 @@
 はないでしょうか．」
 とコメントをいただいている．
 
+
+ラジオボタンの使い勝手に関するコメント
+
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，次に記す通りのレビューを得た．「クライエントの発話の分類ですが，自身の症状についての記述は，愛・交友・
 仕事のどれにも当てはまらないことが多く，第４のタスクとされるself task自
 己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
@@ -32,5 +35,7 @@
 ていると思います．私のモニターのブルーライトカットの影響かもしれませんが，
 特に黄色は見えませんでした．よって，色を変えていただけると助かります．」「青色の【】は黒字と判別
 がつきにくくなりました．」などのコメントをいただいている．
+
+
 
 
