--- a/main.bib
+++ b/main.bib
@@ -3,7 +3,7 @@
 
 
 @book{ad2,
-	author = {HEINZ L. ANSBACHER, ROWENA R. ANSBACHER},
+	author = {HEINZ L. ANSBACHER，ROWENA R. ANSBACHER},
 	title = {THE INDIVIDUAL PSYCHOLOGY OF ALFRED ADLER},
 	publisher = {New York : Haper, Row, Publishers, Inc.},
 	year = 1956
@@ -21,6 +21,13 @@
         	pages = "320-329"
 }
 
+
+@article{bostock2012d3,
+  title={D3. js},
+  author={Bostock, Michael},
+  journal={Data Driven Documents},
+  year={2012}
+}
 
 
 @book{zokad,
@@ -42,7 +49,7 @@
 }
 
 @ARTICLE{kango,
-	author = "新美綾子, 杉浦暁代",
+	author = "杉浦暁代，新美綾子",
 	title = "プロジェクト学習を用いた成人看護学概論の学習により学生が認識した学びと成長 ―テキストマイニングによる分析―",
 	journal = "第44 回日本看護学会 看護教育 学術集会抄録集",
 	year = 2013,
@@ -55,6 +62,16 @@
 	title = "Webカウンセリングシステムの開発および心理データの可視化",
 	year = 2013,
         pages = "1-116",
+}
+
+
+@inproceedings{itoh2010interactive,
+  title={An interactive visualization framework for time-series of web graphs in a 3D environment},
+  author={Itoh, Masahiko and Toyoda, Masashi and Kitsuregawa, Masaru},
+  booktitle={Information Visualisation (IV), 2010 14th International Conference},
+  pages={54--60},
+  year={2010},
+  organization={IEEE}
 }
 
 
@@ -83,7 +100,7 @@
 
 
 @ARTICLE{voistrap,
-	author = "下谷啓ほか, 米山博人, 原田陽雄",
+	author = "原田陽雄，米山博人，下谷啓ほか",
 	title = "コミュニケーション可視化技術「Voistrap®」",
 	journal = "富士ゼロックス テクニカルレポート",
 	year = 2013,
