--- a/chapter1.tex
+++ b/chapter1.tex
@@ -8,13 +8,11 @@
 
 そこで，ベテランのカウンセラーがビギナーのカウンセラーに指導する機会が設けられている．たとえば今回書き起こしテキストデータを使用した「心療内科における摂食障害専門ヨーガ療法グループ」事例検討会では，ビギナーのカウンセラーに対してカウンセリングに関するアドバイスがなされている．しかし現状では，クライエントとビギナーのカウンセラーとのカウンセリング内容を動画で撮影し，その動画書き起こされたカウンセリング内容のテキストデータを，ベテランのカウンセラーらが読んで，議論をする，という流れである．そのため，ベテランのカウンセラーが全体を読んでからの各々カウンセリング内容を分析するという流れに，時間を要する．
 
-そこで本研究では，クライエントとビギナーのカウンセラーとの会話を，時間軸に沿って可視化するWebツールを開発した．本提案ツールはベテランのカウンセラーをユーザーとして想定した．ベテランからビギナーへのカウンセリング指導において重要なことは，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」を引き出したかである．それがベテランのカウンセラーにとってすぐにわかるようになることが，このツールによって期待されることである．
+そこで本研究では，クライエントとビギナーのカウンセラーとの会話を，時間軸に沿って可視化するWebツールを開発した．本提案ツールはベテランのカウンセラーをユーザーとして想定した．ベテランからビギナーへのカウンセリング指導において重要なことは，ビギナーがクライエントにどのような質問を投げかけるかによって，ビギナーがクライエントからどのような「対人関係上の問題」を引き出したかである．それがベテランのカウンセラーにとってすぐにわかるようになることが，このツールによって期待されることである．
 
 
 
-クライエントの会話内容としては，第3章で詳しく述べるどの課題領域（仕事，交友，愛）に属するのか，カウンセラーの質問としては，内容が「開かれた質問」なのかまたは「閉じられた質問」なのかを分類表示できることが必要である．
-
-クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
+クライエントの会話内容としては，第3章で詳しく述べるどの課題領域（仕事，交友，愛）に属するのか，カウンセラーの質問としては，内容が「開かれた質問」なのかまたは「閉じられた質問」なのかを分類表示できることが必要である．クライエントからの提出した話題が，どの領域に関するものか，カウンセリングの中でその領域がどのように変わっていくかを分析していくと，そのカウンセリングプロセスがより明確になると考えられる．タイムラインで見ると，最初にクライエントの関心がどこにあったのか，それに対してカウンセラーからの発話で異なった領域に話題が展開した，というような分析も可能になると考えられる．
 
 
 本論文の構成は以下のとおりである．第1章では，本論文の序論である．第2章では，本論文の関連研究を挙げる．第3章では，ツール開発にあたり必要になってくるヨーガセラピーの競う事項について説明する．第4章では，提案ツールのプロトタイプ開発とカウンセラーのフィードバックで最終ツールの要件を整理する．第5章では，要件を満たすための視覚的表現(Visual Representation, Visual Design)，ユーザーインタラクションなどについて重点的に説明する．第6章では，前章で説明した提案ツールに対してのカウンセラーによる評価について述べる．第7章ではそれに対する考察を述べる．第8章では本論文の結論と本研究が抱える今後の課題について述べる．
