--- a/chapter7.tex
+++ b/chapter7.tex
@@ -1,4 +1,4 @@
-本章では，前章で述べたツール評価を元にした考察について述べる．第1章で述べた通り，本提案ツールをユーザーであるベテランのカウンセラーが使用することによって期待されることは，ベテランからビギナーへのカウンセリング指導において，ビギナーのカウンセラーがクライエントにどのような質問を投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」を引き出したかが，ベテランのカウンセラーにとってすぐにわかることであった．
+本章では，前章で述べたツール評価を元にした考察について述べる．第1章で述べた通り，ベテランからビギナーへのカウンセリング指導において重要なことは，ビギナーがクライエントにどのような質問を投げかけるかによって，ビギナーがクライエントからどのような「対人関係上の問題」を引き出したかである．それがベテランのカウンセラーにとってすぐにわかるようになることが，本提案ツールによって期待されることである．
 
 2016年1月の「心の可視化研究会」では，可視化の専門家，心理学の専門家など12名の方に本ツールのプロトタイプを見ていただき，アイデアに関して概ね良い評価をいただいた．本ツールの目的は，ベテランからビギナーへのカウンセリング指導において，どのような質問をビギナーのカウンセラーがクライエントに投げかけるかによって，ビギナーのカウンセラーがクライエントからどのような「対人関係上の問題」に関する回答を引き出せたかが，ベテランのカウンセラーにとってすぐにわかるようになることであったが，これに関して根本的には達成したと考える．
 
@@ -8,7 +8,11 @@
 まず本提案ツールの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．これは，入力するテキストデータが長文である場合分類を手動修正する回数も多く，ご多忙なベテランカウンセラーが長文テキストデータを一度に修正しきれないためにこの機能が求められているとかんがえられる．これに対する解決策として，どの選択肢が選ばれているかを出力する機能や，Googleアカウントなどで入力データや選択肢データを管理する機能などが考えられる．
 
 
-また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
+次に，本提案ツールに対するレビューとして，ラジオボタンの使い勝手に関するレビューが多かった．
+これは文のグループの分類を手動で変更することで折り畳み機能やラジオボタンの表示の順番など，説明不足な点が多かったからであると考える．
+
+
+%また，クライエントの話題の分布の時間経過の可視化方法について積み重ね折れ線グラフ以外の可視化方法を試すことや，カウンセラーの質問の形態の可視化方法について縦棒の形式だけではなく積み重ね折れ線グラフなどの他の可視化方法を試すことも求められる．
 
 アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，メインのグループ分けである「愛」「交友」「仕事」だけでなく「自己」「スピリチュアル」も選択肢に入れてほしいというレビューを得た．これは，クライエント自身の症状の話については「愛」「仕事」「交友」に分類されず，「自己」「スピリチュアル」に分類されることが多いからである．したがって，自己とスピリチュアルの項目を積み重ね折れ線グラフに取り入れる必要性があると考えられるが，次に述べる配色の問題にもかかわってくるので，色の使い分けに注意したいと考える．
 
