--- a/chapter6.tex
+++ b/chapter6.tex
@@ -1,33 +1,25 @@
 本章ではユーザーによる，前章で述べた提案ツールに対するの評価について述べる．
 
-本ツール自体に関してはこの研究が進んでいくことによって，心理臨
-床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になって
-いけることを願っております．こういう着想はありませんでしたので，大変期待
-しているところです．
-とコメントをいただいている．
+%本ツール自体に関してはこの研究が進んでいくことによって，心理臨床におけるスーパービジョンにおいて，客観性にもとづく指導が可能になっていけることを願っております．こういう着想はありませんでしたので，大変期待しているところです．とコメントをいただいている．
 
-またプロトタイプから前章の提案ツールへの変更についても概ね好評価をいただいている．
+%またプロトタイプから前章の提案ツールへの変更についても概ね好評価をいただいている．
 
 
 
 
 まず本提案ツールの大きな今後の課題として，左下範囲の選択肢で各発言の分類を手動変更した後にその手動変更を保存ないし出力する機能が求められている．これに関しては，
 
-「長い文章ですので，その日
-だけの使用では終わらないことが多いため」
-「実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるもので
-すので，この点については，ぜひとも改善していただかないと実用できないので
-はないでしょうか．」
-とコメントをいただいている．
+長い文章を入力した際に，その日
+だけの使用では終わらないことが多いため実際，開くたびに毎回同じことをさせられるのは，大変苦痛になってくるので，この点について改善しないと実用できないというコメントをいただいている．
 
 
-ラジオボタンの使い勝手に関するコメント
+%ラジオボタンの使い勝手に関するコメント
 
-アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，次に記す通りのレビューを得た．「クライエントの発話の分類ですが，自身の症状についての記述は，愛・交友・
-仕事のどれにも当てはまらないことが多く，第４のタスクとされるself task自
+アドラー心理学におけるクライエントが抱える問題の関心事のグループ分けに関して，自身の症状についての記述は，愛・交友・
+仕事のどれにも当てはまらないことが多いため，第４のタスクとされるself task自
 己，第５のタスクとされるsupiritual taskスピリチュアルの二つを追加してい
-ただく方がいいかもしれません．症状に囚われているクライエントは，自己の課題が大半
-になるといえます．」
+ただく方がいいかもしれないというレビューをいただいた．症状に囚われているクライエントは，自己の課題が大半
+になるといえる．
 
 
 
