--- a/chapter4.tex
+++ b/chapter4.tex
@@ -276,55 +276,57 @@ Ericдщ\cite{taskdriven}д╧бде╚е╘е├епете╟еъеєе░д╦дшд├д╞╩мд▒д┐е╚е╘е├епд╬╗■┤╓╩м╔█дЄ╛
 \item ╕╜╛їд╟д╧д╜д╬╛ьд╟еще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дид┐д└д▒д╟д╧е░еще╒д╦д╜д╬┴к┬Єд╬╩╤╣╣дм╚┐▒╟д╡дьд║бд1▓є1▓єе╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╞бдележеєе╗еъеєе░д╬╩╕╗·╡пд│д╖е╞ене╣е╚е╟б╝е┐д╬jsonе╒ебедеыдт╞╔д▀╣■д▀─╛д╣╔м═╫дм└╕д╕д╞дддыбее╓ещеже╢╛хд╟е┌б╝е╕дЄеъеэб╝е╔д╖д╩дпдтбдеще╕еке▄е┐еєд╬┴к┬ЄдЄ╩╤дидыд│д╚д╟е╖б╝ереье╣д╦е░еще╒дм╩╤▓╜д╖д╞д█д╖ддд╚дддже│есеєе╚дЄддд┐д└ддд┐бе
 
 
-\item еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
-д▐д┐бде╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
-едеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞╩м╬рд╟дндыдшджд╦д╖д╞ддд┐д└д▒ды
-д╚║о═Ёд╖д╩ддд╟ддддд╬д╟д╣дмбеепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╩м╬ед╡дьд┐
-╛ь╜ъд╟╩м╬рд╖д╞дддпд╚бд╞├д╦ележеєе╗ещб╝д╬╚п╕└дм▓┐д╦╕■д▒д╞длдмдядлдъд╦дпдпбд
-╩м╬рдм╞ёд╖дпд╩дыдшджд╟д╖д┐бе
-б╩епещедеиеєе╚д╬╚п╕└дЄб╦епеъе├епд╖д╞бд╚є╔╜╝идЄ╔╜╝ид╦д╖д┐╛ь╣чбдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞д╧б╩┬и║┬д╦б╦┴к┬Єдм
-д╟днд╩ддд╬д╟бдд╜д╬╛ьд╟┴к┬Єд╟дндыдшджд╦д╖д╞ддд┐д└дп╩¤дм╩╪═°д╟д╧д╩дддлд╚╣═
-дид▐д╣б╫
+%\item %еэб╝елеыд╟д╬╞░║юд╦дкддд╞бдеще╕еке▄е┐еє╔╜╝ид╦╠є10╔├╔м═╫д╟двдъбдд╜д╬╖╨▓с╗■┤╓дм╠ф┬ъ╗ыд╡дьд╞ддд┐бе
+%д▐д┐бде╫еэе╚е┐еде╫д╟д╧бдепещедеиеєе╚д╬╚п╕└д╦┤╪д╣ды┴к┬Є╗шдмд╣д┘д╞╔╜╝ид╡дьд┐╕хд╦ележеєе╗ещб╝д╦┤╪д╣ды╚п╕└дм╔╜╝ид╡дьдыдшджд╦д╩д├д╞ддд┐бед╖длд╖д╜дьд╟д╧дядлдъд┼дщддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бед╜д╬╞т═╞д╧╝бд╦╝ид╣дтд╬д╟двдыбеб╓епещедеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└дм╕Є╕▀д╦╕╜дьд╞дддыд╜д╬╛ь╜ъд╟бдепещ
+%едеиеєе╚д╬╚п╕└д╚ележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞╩м╬рд╟дндыдшджд╦д╖д╞ддд┐д└д▒ды
+%д╚║о═Ёд╖д╩ддд╟ддддд╬д╟д╣дмбеепещедеиеєе╚д╚ележеєе╗ещб╝д╬╚п╕└дм╩м╬ед╡дьд┐
+%╛ь╜ъд╟╩м╬рд╖д╞дддпд╚бд╞├д╦ележеєе╗ещб╝д╬╚п╕└дм▓┐д╦╕■д▒д╞длдмдядлдъд╦дпдпбд
+%╩м╬рдм╞ёд╖дпд╩дыдшджд╟д╖д┐бе
+%б╩епещедеиеєе╚д╬╚п╕└дЄб╦епеъе├епд╖д╞бд╚є╔╜╝идЄ╔╜╝ид╦д╖д┐╛ь╣чбдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞д╧б╩┬и║┬д╦б╦┴к┬Єдм
+%д╟днд╩ддд╬д╟бдд╜д╬╛ьд╟┴к┬Єд╟дндыдшджд╦д╖д╞ддд┐д└дп╩¤дм╩╪═°д╟д╧д╩дддлд╚╣═
+%дид▐д╣б╫
 
 
 
-\item епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд╝бд╦╝ид╣еье╙ехб╝дЄддд┐д└ддд┐бе
-б╓б╪╗┼╗Ўб┘д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд
-░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеє
-д╟д╧░жд╬▓▌┬ъд╚д╩дъд▐д╣бе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеє
-д╬├цд╟╗╚═╤д╡дьд╞дддыдлд╟╖шд▐дъд▐д╣д╬д╟бдд│д╬╩м╬р╩¤╦бд╧╔╘┼м┼Ўд╚дддид▐д╣бе
-дшд├д╞бд╧├┬ъдмд│д╬г│д─д╬▓▌┬ъд╬д╔дьд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╟д╖длд╟дн
-д╩ддд╚╣═дид▐д╣бед─д▐дъбдг▒╩╕дмд╔д╬▓▌┬ъд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╩дщд╨дя
-длдъд▐д╣бе
-д┐д╚дид╨бдб╪джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бе
-д╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дм
-дщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜
-джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб┘д╚дддждшджд╩╩╕╛╧д╟д╣бе║╟╜щд╬╩╕д╧░жд╬▓▌┬ъбд
-┬шг▓╩╕д╧╗┼╗Ўд╬▓▌┬ъбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨╡Ўд╗д╩ддбкбкд╧░жд╬▓▌┬ъд╟д╣б╫
-░╩╛хдлдщбд├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
+\item %епещедеиеєе╚д╬╚п╕└д╦д─ддд╞бд╝бд╦╝ид╣еье╙ехб╝дЄддд┐д└ддд┐бе
+%б╓б╪╗┼╗Ўб┘д╚дддж├▒╕ьдм╜╨д╞днд╞дтбд
+%░жд╬▓▌┬ъд╚д╖д╞д╬╔╫д╦д─ддд╞д╬д╧д╩д╖дЄд╖д╞дддыд╚днд╧бдд╜д╬е╖е┴ехеиб╝е╖ечеє
+%д╟д╧░жд╬▓▌┬ъд╚д╩дъд▐д╣бе╞░╗ьбд╖┴═╞╗ьдт╞▒д╕дпбдд╔д╬▓▌┬ъд╬е╖е┴ехеиб╝е╖ечеє
+%д╬├цд╟╗╚═╤д╡дьд╞дддыдлд╟╖шд▐дъд▐д╣д╬д╟бдд│д╬╩м╬р╩¤╦бд╧╔╘┼м┼Ўд╚дддид▐д╣бе
+%дшд├д╞бд╧├┬ъдмд│д╬г│д─д╬▓▌┬ъд╬д╔дьд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╟д╖длд╟дн
+%д╩ддд╚╣═дид▐д╣бед─д▐дъбдг▒╩╕дмд╔д╬▓▌┬ъд╦╞■д├д╞дддыдлбдд╚дддж╩м╬рд╩дщд╨дя
+%длдъд▐д╣бе
+%д┐д╚дид╨бдб╪джд┴д╬╔╫д╧╗┼╗Ўд╦дддпд╬дЄ╖∙дмд├д╞бд╦ш─л╡пднд╞д│д╩дддєд╟д╣бе
+%д╜дьдЄ╕лд╞дддыд└д▒д╟╩вдм╬йд─дєд╟д╣бе╝л╩мд╬╞▒╬╜дм╞▒д╕дшджд╦╗┼╗Ўд╦╣╘днд┐дм
+%дщд╩дпд╞─л╡пднд╩длд├д┐д╚дддж╧├дЄ╩╣ддд╞дтбдд╡д█д╔╩вд╧╬йд┴д▐д╗дєдмбд╔╫дмд╜
+%джд╩дыд╬д╧└ф┬╨д╦╡Ўд╗д╩ддбкбкб┘д╚дддждшджд╩╩╕╛╧д╟д╣бе║╟╜щд╬╩╕д╧░жд╬▓▌┬ъбд
+%┬шг▓╩╕д╧╗┼╗Ўд╬▓▌┬ъбд╔╫дмд╜джд╩дыд╬д╧└ф┬╨╡Ўд╗д╩ддбкбкд╧░жд╬▓▌┬ъд╟д╣б╫
+%░╩╛хдлдщбд
+├▒╕ь├▒░╠д╟д╧д╩дп╩╕├▒░╠д╟б╓░жб╫б╓╕Є═зб╫б╓╗┼╗Ўб╫дЄ╩м╬рд╣дыдшджд╦╩╤╣╣д╣дыд│д╚дм╡сдсдщдьдыбе
 
-\item ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
+\item %ележеєе╗ещб╝д╬╚п╕└д╬╩м╬р├▒░╠д╦д─ддд╞бд
 д▐д║бдепещедеиеєе╚длдщд╬╩╓┼·д└д▒д╟д╩дпбдележеєе╗ещб╝д╬╝┴╠ф╢ш╩мд▒дт╝ъ╞░д╟╜д└╡д╖д┐ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 д▐д┐бдележеєе╗ещб╝д╬╚п╕└д╦д─ддд╞бдб╓│лдлдьд┐╝┴╠фб╫б╓╩─д╕дщдьд┐╝┴╠фб╫д└д▒д╟д╩дпбдб╓▓Є╝сб╫б╓┴ъ─╚б╫б╓└д┤╓╧├б╫д╚дддж╩м╬рдЄ─╔▓├д╖д╞д█д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
 \item 
-╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двдыд╚╣═дидщдьдыбе
-╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
+╕╢╩╕длдщбдележеєе╗ещб╝длдщепещедеиеєе╚д╪д╬╝┴╠ф╗Ў╣рд╬╩м╬рд╬╗╪╔╕д╚д╖д╞бдепещедеиеєе╚д╬╚п╕└дЄджд╩дмд╖д╞епещедеиеєе╚╝л┐╚дт╡дд┼ддд╞ддд╩длд├д┐д│д╚дЄ╟з├╬д╡д╗дыд╬дм┬ч╗Ўд╟двдыд╬д╟бдд╜дьд╛дьд╬╚п╕└╬╠д╬▓─╗ы▓╜д╬╝┬┴їдЄ└╣дъ╣■дрд┘днд╟двды%д╚╣═дидщдьды
+бе
+%╩м╬╠д╦▒■д╕д╞╜─╦└д╬┬└д╡дф┤╓│╓дЄ╩╤дидыд│д╚дЄ─є░╞д╖д┐д╚д│дэ═▀д╖ддд╚ддджеье╙ехб╝дЄддд┐д└ддд┐бе
 
 
-\item 
-╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
-б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
-д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
-╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е─б╝еыд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
+%\item 
+%╩╕╗·┐зд╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐бе
+%б╓╩╕╗·д╬┐зд╟д╣дмбд▓л┐зд╚│е┐зд╧бде╨е├епд╬╟Єд╚длд╓д├д╞╕лдид╦дпдпд╩д├
+%д╞дддыд╚╗╫ддд▐д╣бе╗фд╬ете╦е┐б╝д╬е╓еыб╝ещеде╚еле├е╚д╬▒╞╢┴длдтд╖дьд▐д╗дєдмбд
+%╞├д╦▓л┐зд╧╕лдид▐д╗дєд╟д╖д┐бедшд├д╞бд┐здЄ╩╤дид╞ддд┐д└д▒дыд╚╜їдлдъд▐д╣беб╫д╖д┐дмд├д╞бд╦▄е─б╝еыд╬бд╞├д╦ележеєе╗ещб╝д╦┤╪д╣ды╜─╦└дф╝┬║▌д╬╡н╜╥д╬╔┴▓шд╦дкддд╞▓■┴▒д╣ды╔м═╫дмдвдыбе
 
 \item 
 └╤д▀╜┼д═└▐дь└■е░еще╒д╦дкддд╞бд╜─╝┤▓г╝┤дм▓┐дЄ╔╜д╖д╞дддыдлдядлдщд╩ддд╬д╟бд╝┤дЄ╔╜╝ид╣дыдшджд╦╡сдсдщдьд┐бе
-║╟╕хд╦бд
-╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
-╠╠д╟╕лдшджд╚д╣дыд╚е╒ейеєе╚е╡еде║дм╢╦дсд╞╛од╡дпд╩дъбд╧╖┤уд╦д╚д├д╞д╧╚╜╩╠╔╘
-╟╜д╚д╩д├д╞д╖д▐ддд▐д╣бее╒ейеєе╚е╡еде║дЄ╛хд▓дыд│д╚д╧д╟днд▐д╣длбй
-б╫д╖д┐дмд├д╞бде╒ейеєе╚е╡еде║дЄ┬чдндпд╣ды╔м═╫дмдвдыбе
+%║╟╕хд╦бд
+%╩╕╗·д╬┬чднд╡д╦д─ддд╞╝бд╬е│есеєе╚дЄддд┐д└ддд┐беб╓ете╦е┐б╝дм╛од╡дд╛ь╣чбдг▒
+%╠╠д╟╕лдшджд╚д╣дыд╚е╒ейеєе╚е╡еде║дм╢╦дсд╞╛од╡дпд╩дъбд╧╖┤уд╦д╚д├д╞д╧╚╜╩╠╔╘
+%╟╜д╚д╩д├д╞д╖д▐ддд▐д╣бее╒ейеєе╚е╡еде║дЄ╛хд▓дыд│д╚д╧д╟днд▐д╣длбй
+%б╫д╖д┐дмд├д╞бде╒ейеєе╚е╡еде║дЄ┬чдндпд╣ды╔м═╫дмдвдыбе
 
 \end{itemize}
